Added some mapping for admin and user related pages.

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -78,6 +78,7 @@
 
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<!-- Advanced Tables -->
+						<!-- Currently it contains hard-coded data later data will from database -->
 						<div class="panel panel-default">
 							<div class="panel-heading">Today's bookings</div>
 							<div class="panel-body">
@@ -288,498 +289,6 @@
 												<td class="center">7:00</td>
 												<td class="center">9:30</td>
 												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34340</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34341</td>
-												<td class="center">usr64765</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34342</td>
-												<td class="center">usr67785</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34343</td>
-												<td class="center">usr54254</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34344</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34345</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34346</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34347</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34348</td>
-												<td class="center">usr54656</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34349</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34350</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34351</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34352</td>
-												<td class="center">usr12143</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34353</td>
-												<td class="center">usr47657</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34354</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34355</td>
-												<td class="center">usr654656</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn865674</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34356</td>
-												<td class="center">usr34435</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34357</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34358</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34359</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34360</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34361</td>
-												<td class="center">usr34546</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34362</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34363</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34364</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34365</td>
-												<td class="center">usr546335</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34366</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34367</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34368</td>
-												<td class="center">usr798798</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34369</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34370</td>
-												<td class="center">usr24234</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34371</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34372</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34373</td>
-												<td class="center">usr475677</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34374</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34375</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34376</td>
-												<td class="center">usr456570</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34377</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34378</td>
-												<td class="center">usr34356</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34379</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34380</td>
-												<td class="center">usr3657768</td>
-												<td class="center">Z</td>
-												<td class="center">9:00</td>
-												<td class="center">pkp54547</td>
-												<td class="center">pkp56677</td>
-												<td class="center">9:00</td>
-												<td class="center">11:30</td>
-												<td class="center">trn576869</td>
 											</tr>
 										</tbody>
 									</table>
