--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -185,12 +185,12 @@
 						class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-user">
-						<li><a th:href="@{#}"><i class="fa fa-user fa-fw"></i>
+						<li><a th:href="@{/userProfile}"><i class="fa fa-user fa-fw"></i>
 								User Profile</a></li>
-						<li><a th:href="@{#}"><i class="fa fa-gear fa-fw"></i>
+						<li><a th:href="@{/admin/changePassword}"><i class="fa fa-gear fa-fw"></i>
 								Settings</a></li>
 						<li class="divider"></li>
-						<li><a th:href="@{#}"><i class="fa fa-sign-out fa-fw"></i>
+						<li><a th:href="@{/logout}"><i class="fa fa-sign-out fa-fw"></i>
 								Logout</a></li>
 					</ul> <!-- /.dropdown-user --></li>
 				<!-- /.dropdown -->
@@ -201,7 +201,7 @@
 			<div class="sidebar-collapse">
 				<ul class="nav" id="main-menu">
 
-					<li><a th:href="@{/admin/adminhome}"><i
+					<li><a th:href="@{/admin/adminHome}"><i
 							class="fa fa-dashboard "></i>Dashboard</a></li>
 					<li><a th:href="@{/admin/pricingandplans}"><i
 							class="fa fa-desktop "></i> Pricing and plans</a></li>
