--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -15,21 +15,21 @@
 
 <!-- Bootstrap CSS
    ================================================== -->
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/nivo-lightbox.css" />
-<link rel="stylesheet" href="css/nivo_themes/default/default.css" />
+<link rel="stylesheet" href="/css/bootstrap.min.css" />
+<link rel="stylesheet" href="/css/nivo-lightbox.css" />
+<link rel="stylesheet" href="/css/nivo_themes/default/default.css" />
 
 <!-- Font Icons
    ================================================== -->
-<link rel="stylesheet" href="css/font-awesome.min.css"
+<link rel="stylesheet" href="/css/font-awesome.min.css"
 	th:href="@{css/font-awesome.min.css}" />
-<link rel="stylesheet" href="css/et-line-font.css"
+<link rel="stylesheet" href="/css/et-line-font.css"
 	th:href="@{css/et-line-font.css}" />
 
 <!-- Main CSS
    	================================================== -->
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" type="text/css" href="css/default.css" />
+<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/css/default.css" />
 
 <!-- Google web font
    ================================================== -->
@@ -55,26 +55,37 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#home" class="smoothScroll">HOME</a></li>
-					<li><a href="index.html#work" class="smoothScroll">HOW IT
+					<li><a href="/index.html#home" class="smoothScroll">HOME</a></li>
+					<li><a href="/index.html#work" class="smoothScroll">HOW IT
 							WORKS</a></li>
-					<li><a href="index.html#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="index.html#portfolio" class="smoothScroll">GALLERY</a></li>
-					<li><a href="index.html#plan" class="smoothScroll">PLANS</a></li>
-					<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
+					<li><a href="/index.html#about" class="smoothScroll">ABOUT</a></li>
+					<li><a href="/index.html#portfolio" class="smoothScroll">GALLERY</a></li>
+					<li><a href="/index.html#plan" class="smoothScroll">PLANS</a></li>
+					<li><a href="/index.html#contact" class="smoothScroll">CONTACT</a></li>
 					<li class="dropdown pull-right" sec:authorize="isAuthenticated()"><a
 						href="#" data-toggle="dropdown" class="dropdown-toggle"><i
 							class="fa fa-user fa-fw"></i><span>ACCOUNT</span><strong
 							class="caret"></strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="userProfile" style="color: black;"><i
+							<li><a href="/userProfile" style="color: black;"><i
 									class="fa fa-user fa-fw"></i>View Profile<br /> [<small
 									sec:authentication="name">[email]</small>] </a></li>
 							<li class="divider"></li>
-							<li><a href="changePassword" style="color: black;"><i
-									class="fa fa-gear fa-fw"></i>Change Password</a></li>
+							<li><div th:switch="${#authentication.principal.userRole}">
+								<p th:case="ADMIN">
+									<a href="/admin/changePassword" style="color: black;"><i
+									class="fa fa-gear fa-fw"></i>Change Password</a>
+								</p>
+								<p th:case="MANAGER">
+									<a href="/admin/changePassword" style="color: black;"><i
+									class="fa fa-gear fa-fw"></i>Change Password</a>
+								</p>
+								<p th:case="USER">
+									<a href="/user/changePassword" style="color: black;"><i
+									class="fa fa-gear fa-fw"></i>Change Password</a>
+								</p></div></li>
 							<li class="divider"></li>
-							<li><a href="logout" style="color: black;"><i
+							<li><a href="/logout" style="color: black;"><i
 									class="fa fa-sign-out fa-fw"></i>Logout</a></li>
 						</ul></li>
 				</ul>
@@ -126,7 +137,7 @@
 			<div class="row">
 				<div class="col-md-3" align="left">
 					<h4>
-						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+						Copyright <a href="/index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
 				<div class="col-md-6"></div>
@@ -140,9 +151,9 @@
 	</div>
 
 	<!-- javascript  -->
-	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
-	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
-	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
-	<script src="js/custom.js" th:src="@{js/custom.js}"></script>
+	<script src="/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+	<script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="/js/smoothscroll.js" th:src="@{/js/smoothscroll.js}"></script>
+	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
 </body>
 </html>
