Added 'add new pickup point' page and its corresponding controllers, component, service and repository. Modified some other classes.

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -21,7 +21,7 @@
 
 			<ul class="nav navbar-top-links navbar-right">
 				<li class="dropdown"><a
-					class="dropdown-toggle w3-btn w3-ripple" data-toggle="dropdown"
+					class="dropdown-toggle" data-toggle="dropdown"
 					th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-envelope fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
@@ -59,7 +59,7 @@
 					</ul> <!-- /.dropdown-messages --></li>
 				<!-- /.dropdown -->
 				<li class="dropdown"><a
-					class="dropdown-toggle w3-btn w3-ripple" data-toggle="dropdown"
+					class="dropdown-toggle" data-toggle="dropdown"
 					th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
@@ -134,7 +134,7 @@
 					</ul> <!-- /.dropdown-tasks --></li>
 				<!-- /.dropdown -->
 				<li class="dropdown"><a
-					class="dropdown-toggle w3-btn w3-ripple" data-toggle="dropdown"
+					class="dropdown-toggle" data-toggle="dropdown"
 					th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
@@ -180,7 +180,7 @@
 					</ul> <!-- /.dropdown-alerts --></li>
 				<!-- /.dropdown -->
 				<li class="dropdown"><a
-					class="dropdown-toggle w3-btn w3-ripple" data-toggle="dropdown"
+					class="dropdown-toggle" data-toggle="dropdown"
 					th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
@@ -220,7 +220,7 @@
 								<ul class="nav nav-third-level ">
 									<li><a th:href="@{/admin/pickuppointdetails}">Pickup
 											point details</a></li>
-									<li><a th:href="@{/admin/addnewpickuppoint}">Add new
+									<li><a th:href="@{/admin/addNewPickupPoint}">Add new
 											pickup point</a></li>
 									<li><a th:href="@{#}">Bicycle transfer</a></li>
 
