--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -68,13 +68,13 @@
 						<h2>Please Sign In</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="email" name="email" th:field="*{email}"
+							<input type="email" name="email"
 								class="form-control input-lg" placeholder="Enter Email Id"
 								tabindex="3" title="Enter Valid Email Id" required="required" />
 						</div>
 
 						<div class="form-group">
-							<input type="password" name="password" th:field="*{password}"
+							<input type="password" name="password"
 								class="form-control input-lg" placeholder="Enter Password"
 								tabindex="3" required="required" />
 						</div>
