--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -15,14 +15,13 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " th:href="@{/admin/adminhome}">Bicycle
+				<a class="navbar-brand " th:href="@{/admin/adminHome}">Bicycle
 					Sharing</a>
 			</div>
 
 			<ul class="nav navbar-top-links navbar-right">
-				<li class="dropdown"><a
-					class="dropdown-toggle" data-toggle="dropdown"
-					th:href="@{#}" aria-expanded="false"> <i
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-envelope fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-messages">
@@ -58,9 +57,8 @@
 						</a></li>
 					</ul> <!-- /.dropdown-messages --></li>
 				<!-- /.dropdown -->
-				<li class="dropdown"><a
-					class="dropdown-toggle" data-toggle="dropdown"
-					th:href="@{#}" aria-expanded="false"> <i
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-tasks">
@@ -133,9 +131,8 @@
 						</a></li>
 					</ul> <!-- /.dropdown-tasks --></li>
 				<!-- /.dropdown -->
-				<li class="dropdown"><a
-					class="dropdown-toggle" data-toggle="dropdown"
-					th:href="@{#}" aria-expanded="false"> <i
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-alerts">
@@ -179,19 +176,19 @@
 						</a></li>
 					</ul> <!-- /.dropdown-alerts --></li>
 				<!-- /.dropdown -->
-				<li class="dropdown"><a
-					class="dropdown-toggle" data-toggle="dropdown"
-					th:href="@{#}" aria-expanded="false"> <i
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" th:href="@{#}" aria-expanded="false"> <i
 						class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-user">
-						<li><a th:href="@{/userProfile}"><i class="fa fa-user fa-fw"></i>
-								User Profile</a></li>
-						<li><a th:href="@{/admin/changePassword}"><i class="fa fa-gear fa-fw"></i>
-								Settings</a></li>
+						<li><a
+							th:href="@{/users/userProfile/} + ${#authentication.principal.userId}"><i
+								class="fa fa-user fa-fw"></i> User Profile</a></li>
+						<li><a th:href="@{/admin/changePassword}"><i
+								class="fa fa-gear fa-fw"></i> Settings</a></li>
 						<li class="divider"></li>
-						<li><a th:href="@{/logout}"><i class="fa fa-sign-out fa-fw"></i>
-								Logout</a></li>
+						<li><a th:href="@{/logout}"><i
+								class="fa fa-sign-out fa-fw"></i> Logout</a></li>
 					</ul> <!-- /.dropdown-user --></li>
 				<!-- /.dropdown -->
 			</ul>
@@ -203,22 +200,22 @@
 
 					<li><a th:href="@{/admin/adminHome}"><i
 							class="fa fa-dashboard "></i>Dashboard</a></li>
-					<li><a th:href="@{/admin/pricingandplans}"><i
+					<li><a th:href="@{/admin/pricingAndPlans}"><i
 							class="fa fa-desktop "></i> Pricing and plans</a></li>
 					<li><a th:href="@{#}"><i class="fa fa-bar-chart-o "></i>Charts</a></li>
 					<li><a th:href="@{/admin/requests}"><i
 							class="fa fa-qrcode "></i>Requests</a></li>
-					<li><a th:href="@{/admin/users}"><i class="fa fa-table "></i>Users</a></li>
+					<li><a th:href="@{/admin/userDetails}"><i class="fa fa-table "></i>Users</a></li>
 					<li><a th:href="@{#}"><i class="fa fa-edit "></i>Forms</a></li>
 					<li><a th:href="@{#}"><i class="fa fa-sitemap "></i>Manage
 							Pickup points<span class="fa arrow "></span></a>
 						<ul class="nav nav-second-level ">
-							<li><a th:href="@{/admin/addnewbicycle}">Add bicycle</a></li>
+							<li><a th:href="@{/admin/addNewBicycle}">Add bicycle</a></li>
 							<li><a th:href="@{#}">Manage roles</a></li>
 							<li><a th:href="@{#}">Pickup points<span
 									class="fa arrow"></span></a>
 								<ul class="nav nav-third-level ">
-									<li><a th:href="@{/admin/pickuppointdetails}">Pickup
+									<li><a th:href="@{/admin/pickupPointDetails}">Pickup
 											point details</a></li>
 									<li><a th:href="@{/admin/addNewPickupPoint}">Add new
 											pickup point</a></li>
