--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -181,6 +181,7 @@
 						class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
 				</a>
 					<ul class="dropdown-menu dropdown-user">
+
 						<li><a
 							th:href="@{/users/userProfile/} + ${#authentication.principal.userId}"><i
 								class="fa fa-user fa-fw"></i> User Profile</a></li>
@@ -223,8 +224,14 @@
 
 								</ul></li>
 						</ul></li>
-					<li><a th:href="@{#}"><i class="fa fa-fw fa-file "></i>
-							Empty Page</a></li>
+					<li><a th:href="@{/manager/addNewUser}"><i
+							class="fa fa-fw fa-file "></i> Add New User</a></li>
+					<li><a th:href="@{/manager/booking}"><i
+							class="fa fa-fw fa-file "></i> Booking</a></li>
+					<li><a th:href="@{/manager/addWalletBalance}"><i
+							class="fa fa-fw fa-file "></i> Add Wallet balance</a></li>
+					<li><a th:href="@{/manager/bicycleTransfer}"><i
+							class="fa fa-fw fa-file "></i> Transfers</a></li>
 				</ul>
 
 			</div>
