Added pickup point details feature.

--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -11,7 +11,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Cache-Control" content="no-cache" />
+<meta http-equiv="Expires" content="Sat, 01 Dec 1900 00:00:00 GMT" />
 <!-- Bootstrap CSS
    ================================================== -->
 <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -68,9 +70,9 @@
 						<h2>Please Sign In</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="email" name="email"
-								class="form-control input-lg" placeholder="Enter Email Id"
-								tabindex="3" title="Enter Valid Email Id" required="required" />
+							<input type="email" name="email" class="form-control input-lg"
+								placeholder="Enter Email Id" tabindex="3"
+								title="Enter Valid Email Id" required="required" />
 						</div>
 
 						<div class="form-group">
@@ -83,8 +85,9 @@
 							<span class="button-checkbox pull-left"> <input
 								type="checkbox" name="remember_me" id="remember_me" /> Remember
 								Me
-							</span> <span><a href="forgotPassword" class="btn btn-link pull-right"
-								style="font-size: 1.1em">Forgot Password?</a></span>
+							</span> <span><a href="forgotPassword"
+								class="btn btn-link pull-right" style="font-size: 1.1em">Forgot
+									Password?</a></span>
 						</div>
 						<br />
 						<hr class="colorgraph" />
