Added update pickup point details feature.

--- a/src/main/resources/templates/addWalletBalance.html
+++ b/src/main/resources/templates/addWalletBalance.html
@@ -62,24 +62,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footerDiv"
-		style="height: 100px; background-color: #babdb6; padding: 20px;">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3" align="left">
-					<h4>
-						Copyright <a href="/index.html#home">Bicycle Sharing</a>
-					</h4>
-				</div>
-				<div class="col-md-6"></div>
-				<div class="col-md-3" align="right">
-					<h4>
-						Developed by <a href="/index.html#home">Java Interns</a>
-					</h4>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div th:include="adminNav :: page-footer"></div>
 	<!-- /. PAGE WRAPPER  -->
 	<!-- /. WRAPPER  -->
 	<!-- JS Scripts-->
