--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -206,7 +206,8 @@
 					<li><a th:href="@{#}"><i class="fa fa-bar-chart-o "></i>Charts</a></li>
 					<li><a th:href="@{/admin/requests}"><i
 							class="fa fa-qrcode "></i>Requests</a></li>
-					<li><a th:href="@{/admin/userDetails}"><i class="fa fa-table "></i>Users</a></li>
+					<li><a th:href="@{/admin/userDetails}"><i
+							class="fa fa-table "></i>Users</a></li>
 					<li><a th:href="@{#}"><i class="fa fa-edit "></i>Forms</a></li>
 					<li><a th:href="@{#}"><i class="fa fa-sitemap "></i>Manage
 							Pickup points<span class="fa arrow "></span></a>
@@ -238,6 +239,26 @@
 
 		</nav>
 		<!-- /. NAV SIDE  -->
+	</div>
+	<div th:fragment="page-footer">
+		<div class="footerDiv"
+			style="height: 100px; background-color: #babdb6; padding: 20px;">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3" align="left">
+						<h4>
+							Copyright <a href="/index.html#home">Bicycle Sharing</a>
+						</h4>
+					</div>
+					<div class="col-md-6"></div>
+					<div class="col-md-3" align="right">
+						<h4>
+							Developed by <a href="/index.html#home">Java Interns</a>
+						</h4>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
