--- a/src/main/resources/templates/addNewPickupPoint.html
+++ b/src/main/resources/templates/addNewPickupPoint.html
@@ -81,6 +81,7 @@
 			</div>
 		</div>
 	</div>
+	<div th:include="adminNav :: page-footer"></div>
 	<!-- JS Scripts-->
 	<!-- jQuery Js -->
 	<script th:src="@{/js/jquery-1.10.2.js}" type="text/javascript"></script>
